Inconsistent rounding in brightness handling
While moving the brightness slider (it is so nice and fast now), I realised that it is jumping around. What seems to happen is that we round down when calculating the effective brightness value and then round down again to get from the brightness value to the percentage which the property reports.
This effectively means that if you e.g. set 23%, the value ends up being 22% and the slider jumps down.