power: Stop the brightness slider from jumping

The GtkScale widget for screen brightness has a tendency to jump around
because GtkRange defaults to NOT rounding values (round_digits = -1).

This means that the widget is constantly set with values that have
decimals (say 10.3) which it then tries to correct to fit the step size.

The solution for this particular UI quirk is to make sure to set
round-digits to 0, as that will force GtkRange to provide GtkScale with
rounded-down numbers. See gtkrange.c.

Fixes: https://gitlab.gnome.org/GNOME/gnome-settings-daemon/issues/405